fixed cart section's height.
-changed the size smaller to avoid having a scrollbar for the whole page.

--- a/website/resources/css/menu.css
+++ b/website/resources/css/menu.css
@@ -341,7 +341,7 @@ margin: 0;
     padding: 10px;
     margin: 3px 3px;
     overflow-y: auto;
-    height:30vh;
+    height:25vh;
 }
 
 #cart-section h2{
